DeveloperOrg/force-app/main/default/objects/sales_Report__c/sales_Report__c.object-meta.xml
<CustomObject>
    <label>sales Report</label>
    <nameField>
        <label>sales Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>sales Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>