DeveloperOrg/force-app/main/default/objects/sales_Report__c/fields/Price_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Price_per_Unit__c</fullName>
    <label>Price per Unit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>