DeveloperOrg/force-app/main/default/objects/sales_Report__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>